syntax = "proto3";

package rivet.backend.pkg.user_identity.get;

import "proto/common.proto";
import "proto/backend/user_identity.proto";

message Request {
	repeated rivet.common.Uuid user_ids = 1;
}

message Response {
	message User {
		rivet.common.Uuid user_id = 1;
		repeated rivet.backend.user_identity.Identity identities = 2;
	}

	repeated User users = 1;
}

message CacheUserEmailIdentity {
	rivet.common.Uuid user_id = 1;
	string email = 2;
}

message CacheUserAccessTokenIdentity {
	rivet.common.Uuid user_id = 1;
	string name = 2;
}
